Day 11 exercises and directory name changes

--- a/week_1/day_3/challenge1.html
+++ b/week_1/day_3/challenge1.html
@@ -130,23 +130,46 @@
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Non autem soluta assumenda saepe sed quos similique a, doloremque maiores sint ea laudantium! A eveniet ea iste inventore facilis dicta modi accusantium fugiat debitis reprehenderit voluptatum, numquam consequatur quidem distinctio labore sed est quasi eius nihil. Facilis consequatur laboriosam magnam aperiam.
 					  </p>
 					</div>
-				  </div>
+				</div>
 			  </div>
 			  <div class="col-lg-6">
+				<div class="col-12">
+					<h2 id="about-us">Meet the team!</h2>
+				</div>
 				  <div class="row">
-					  <div class="col-lg-6 md-12">
-
+					  <div class="col-lg-6 sm-12">
+						<div class="card mt-3 shadow">
+							<div class="card-body">
+								<img class="card-img-top" src="https://api.adorable.io/avatars/285/abott@adorable.png">
+								<h6>John - CEO</h6>
+							</div>
+						</div>
 					  </div>
-					  <div class="col-lg-6 md-12">
-						  
+					  <div class="col-lg-6 sm-12">
+						<div class="card mt-3 shadow">
+							<div class="card-body">
+								<img class="card-img-top" src="https://api.adorable.io/avatars/285/john@adorable.png">
+								<h6>Abbot - Founder</h6>
+							</div>
+						</div>
 					  </div>
 				  </div>
 				  <div class="row">
-					<div class="col-lg-6 md-12">
-
+					<div class="col-lg-6 sm-12">
+						<div class="card mt-3 shadow">
+							<div class="card-body">
+								<img class="card-img-top" src="https://api.adorable.io/avatars/285/alice@adorable.png">
+								<h6>Alice - Line Manager</h6>
+							</div>
+						</div>
 					</div>
-					<div class="col-lg-6 md-12">
-						
+					<div class="col-lg-6 sm-12">
+						<div class="card mt-3 shadow">
+							<div class="card-body">
+								<img class="card-img-top" src="https://api.adorable.io/avatars/285/steve@adorable.png">
+								<h6>Steve - Sales Manager</h6>
+							</div>
+						</div>
 					</div>
 				</div>
 			  </div>
